--- a/exploringEDA.ipynb
+++ b/exploringEDA.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import seaborn as sns\n"
+    "import seaborn as sns\n",
+    "import numpy as np"
    ]
   },
   {
